--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>langchain4j-open-ai-spring-boot-starter</artifactId>
             <version>1.0.0-alpha1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
